--- a/TodoAzureAuth/Droid/packages.config
+++ b/TodoAzureAuth/Droid/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Azure.Mobile.Client" version="4.0.2" targetFramework="monoandroid80" />
+  <package id="Microsoft.Azure.Mobile.Client.SQLiteStore" version="4.0.2" targetFramework="monoandroid80" />
   <package id="Microsoft.CSharp" version="4.4.1" targetFramework="monoandroid80" />
   <package id="Microsoft.NETCore.Platforms" version="2.0.1" targetFramework="monoandroid80" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid80" />
@@ -11,6 +12,11 @@
   <package id="PInvoke.Kernel32" version="0.5.111" targetFramework="monoandroid80" />
   <package id="PInvoke.NCrypt" version="0.5.111" targetFramework="monoandroid80" />
   <package id="PInvoke.Windows.Core" version="0.5.111" targetFramework="monoandroid80" />
+  <package id="sqlite-net-pcl" version="1.4.118" targetFramework="monoandroid80" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.1.9" targetFramework="monoandroid80" />
+  <package id="SQLitePCLRaw.core" version="1.1.9" targetFramework="monoandroid80" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.android" version="1.1.9" targetFramework="monoandroid80" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.android" version="1.1.9" targetFramework="monoandroid80" />
   <package id="System.AppContext" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Collections" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="monoandroid80" />
@@ -58,6 +64,9 @@
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="monoandroid80" />
   <package id="Validation" version="2.4.18" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Arch.Core.Common" version="1.0.0" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Arch.Lifecycle.Common" version="1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Arch.Lifecycle.Runtime" version="1.0.0" targetFramework="monoandroid80" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="26.1.0.1" targetFramework="monoandroid80" />
   <package id="Xamarin.Android.Support.Annotations" version="26.1.0.1" targetFramework="monoandroid80" />
   <package id="Xamarin.Android.Support.Compat" version="26.1.0.1" targetFramework="monoandroid80" />
