--- a/TodoAzureAuth/iOS/packages.config
+++ b/TodoAzureAuth/iOS/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Azure.Mobile.Client" version="4.0.2" targetFramework="xamarinios10" />
+  <package id="Microsoft.Azure.Mobile.Client.SQLiteStore" version="4.0.2" targetFramework="xamarinios10" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="xamarinios10" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="xamarinios10" />
   <package id="Microsoft.CSharp" version="4.4.1" targetFramework="xamarinios10" />
@@ -14,6 +15,10 @@
   <package id="PInvoke.Kernel32" version="0.5.111" targetFramework="xamarinios10" />
   <package id="PInvoke.NCrypt" version="0.5.111" targetFramework="xamarinios10" />
   <package id="PInvoke.Windows.Core" version="0.5.111" targetFramework="xamarinios10" />
+  <package id="sqlite-net-pcl" version="1.4.118" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.1.9" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.core" version="1.1.9" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.provider.sqlite3.ios_unified" version="1.1.9" targetFramework="xamarinios10" />
   <package id="System.AppContext" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="xamarinios10" />
